// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<div
  className="content"
>
  <div />
</div>
`;

exports[`renders default 1`] = `
<section
  className="content"
>
  <div />
</section>
`;
